# astra-rpa

./: .gitignore
docker/volumes/mysql/: init_c_atom_meta_data.sql  schema.sql
engine/: .gitignore  build.bat  pyproject.toml  requirements.txt
engine/components/astronverse-ai/: meta.json  pyproject.toml
engine/components/astronverse-browser/: meta.json  meta_type.json  pyproject.toml
engine/components/astronverse-browser/src/astronverse/browser/: browser.py  browser_element.py  browser_script.py  browser_software.py
engine/components/astronverse-database/: pyproject.toml
engine/components/astronverse-dataprocess/: meta.json  pyproject.toml
engine/components/astronverse-dialog/: meta.json  pyproject.toml
engine/components/astronverse-email/: meta.json  pyproject.toml
engine/components/astronverse-encrypt/: meta.json  pyproject.toml
engine/components/astronverse-enterprise/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-excel/: meta.json  meta_type.json
engine/components/astronverse-input/: meta.json
engine/components/astronverse-network/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-openapi/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-pdf/: meta.json  pyproject.toml
engine/components/astronverse-script/: meta.json
engine/components/astronverse-software/: meta.json
engine/components/astronverse-system/: meta.json
engine/components/astronverse-verifycode/: meta.json  meta.py
engine/components/astronverse-vision/: meta.json
engine/components/astronverse-window/: meta.json
engine/components/astronverse-winelement/: meta.json  pyproject.toml
engine/components/astronverse-word/: meta.json  meta.py  meta_type.json  pyproject.toml
engine/components/astronverse-workflowlib/: pyproject.toml
engine/core/servers/scheduler/: start.py
engine/servers/astronverse-executor/: pyproject.toml
engine/servers/astronverse-picker/: pyproject.toml
engine/servers/astronverse-scheduler/: pyproject.toml
engine/shared/astronverse-actionlib/: pyproject.toml
engine/shared/astronverse-browser-plugin/: pyproject.toml
engine/shared/astronverse-locator/: pyproject.toml
engine/shared/astronverse-tools/: pyproject.toml
engine/shared/astronverse-websocket-server/: pyproject.toml
enginev2/: .gitignore  build.bat  pyproject.toml
enginev2/components/rpaai/: pyproject.toml
enginev2/components/rpaai/src/rpaai/: chat.py
enginev2/components/rpabrowser/: pyproject.toml
enginev2/components/rpabrowser/src/rpabrowser/: browser_element.py
enginev2/components/rpabrowser/src/rpabrowser/utils/: table_filter.py
enginev2/components/rpacv/: pyproject.toml
enginev2/components/rpadatabase/src/rpadatabase/: error.py
enginev2/components/rpadataprocess/: pyproject.toml
enginev2/components/rpadialog/: pyproject.toml
enginev2/components/rpadialog/src/rpadialog/: dialog.py
enginev2/components/rpadocx/: pyproject.toml
enginev2/components/rpaencrypt/: pyproject.toml
enginev2/components/rpaenterprise/src/rpaenterprise/: error.py
enginev2/components/rpaexcel/: pyproject.toml
enginev2/components/rpaexcel/src/rpaexcel/: error.py
enginev2/components/rpahelper/: pyproject.toml
enginev2/components/rpahelper/src/rpahelper/: helper.py
enginev2/components/rpanetwork/: pyproject.toml
enginev2/components/rpanetwork/src/rpanetwork/: error.py
enginev2/components/rpaopenapi/src/rpaopenapi/: core_iflytek.py  error.py
enginev2/components/rpasoftware/src/rpasoftware/: error.py
enginev2/components/rpaverifycode/: pyproject.toml
enginev2/components/rpaverifycode/src/rpaverifycode/: core.py  verifycode.py
enginev2/servers/astronverse-browser-bridge/: pyproject.toml
enginev2/servers/astronverse-executor/: pyproject.toml
enginev2/servers/astronverse-executor/src/astronverse/executor/: logger.py  start.py  tools.py
enginev2/servers/astronverse-executor/src/astronverse/executor/apis/: apis.py  ws.py
enginev2/servers/astronverse-executor/src/astronverse/executor/flow/: atomic.py  params.py  storage.py
enginev2/servers/astronverse-executor/src/astronverse/executor/recording/: recording.py
enginev2/servers/astronverse-executor/src/astronverse/executor/utils/: param_utils.py
enginev2/servers/astronverse-picker/: pyproject.toml
enginev2/servers/astronverse-picker/src/astronverse/picker/: svc.py
enginev2/servers/astronverse-picker/src/astronverse/picker/server/: ws_server.py
enginev2/servers/astronverse-scheduler/: pyproject.toml
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/: start.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/: svc.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/executor/: executor.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/picker/: picker.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/schduler/: init.py  venv.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/servers/: async_server.py
enginev2/servers/astronverse-scheduler/src/astronverse/scheduler/core/setup/: setup.py
enginev2/servers/astronverse-trigger/: pyproject.toml
enginev2/servers/astronverse-vision-picker/: pyproject.toml
enginev2/servers/astronverse-vision-picker/src/astronverse/vision_picker/core/: cv_match.py
enginev2/shared/astronverse-actionlib/: pyproject.toml
enginev2/shared/astronverse-actionlib/src/astronverse/actionlib/: atomic.py  config.py  error.py  types.py  utils.py
enginev2/shared/astronverse-baseline/: pyproject.toml
enginev2/shared/astronverse-browser-plugin/: pyproject.toml
enginev2/shared/astronverse-locator/: pyproject.toml
enginev2/shared/astronverse-locator/src/astronverse/locator/: error.py  locator.py
enginev2/shared/astronverse-locator/src/astronverse/locator/core/: web_locator.py
enginev2/shared/astronverse-tools/src/astronverse/tools/: tools.py
enginev2/shared/astronverse-websocket-client/: pyproject.toml
enginev2/shared/astronverse-websocket-server/: pyproject.toml
frontend/: pnpm-lock.yaml
(+29 files in other folders)
