[project]
name = "engine"
version = "1.0.0"
description = "engine."
requires-python = ">=3.13"

dependencies = [
    "astronverse-scheduler",
    "astronverse-trigger",
    "astronverse-browser-bridge",
    "astronverse-picker",
    "astronverse-vision-picker",
    "astronverse-executor",
    "astronverse-actionlib",
    "astronverse-baseline",
    "astronverse-browser-plugin",
    "astronverse-locator",
    "astronverse-websocket-client",
    "astronverse-websocket-server",
]

[tool.uv.sources]
astronverse-scheduler = {path = "./servers/astronverse-scheduler", editable = true}
astronverse-trigger = {path = "./servers/astronverse-trigger", editable = true}
astronverse-browser-bridge = {path = "./servers/astronverse-browser-bridge", editable = true}
astronverse-picker = {path = "./servers/astronverse-picker", editable = true}
astronverse-vision-picker = {path = "./servers/astronverse-vision-picker", editable = true}
astronverse-executor = {path = "./servers/astronverse-executor", editable = true}
astronverse-actionlib = {path = "./shared/astronverse-actionlib", editable = true}
astronverse-baseline = {path = "./shared/astronverse-baseline", editable = true}
astronverse-browser-plugin = {path = "./shared/astronverse-browser-plugin", editable = true}
astronverse-locator = {path = "./shared/astronverse-locator", editable = true}
astronverse-websocket-client = {path = "./shared/astronverse-websocket-client ", editable = true}
astronverse-websocket-server = {path = "./shared/astronverse-websocket-server", editable = true}

[dependency-groups]
dev = [
  "ruff~=0.12.3"
]
