[project]
name = "rpaai"
version = "1.0.0"
description = "rpaai."
requires-python = ">=3.13"

dependencies = [
    "requests",
    "dotenv",
    "pypdf",
    "python-docx",
    "sseclient-py",
    "astronverse-actionlib",
    "astronverse-tools"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}
astronverse-tools = {path = "../../shared/astronverse-tools", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpaai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
