[project]
name = "rpacv"
version = "1.0.0"
description = "rpacv."
requires-python = ">=3.13"

dependencies = []

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpacv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
