[project]
name = "astronverse-browser-bridge"
version = "1.0.0"
description = "astronverse-browser-bridge."
requires-python = ">=3.13"

dependencies = [
    "astronverse-baseline",
    "astronverse-websocket-server",
    "starlette",
    "uvicorn",
    "fastapi",
    "no-config",
]

[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}
astronverse-websocket-server = {path = "../../shared/astronverse-websocket-server", editable = true}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"