[project]
name = "astronverse-executor"
version = "1.0.0"
description = "astronverse-executor."
requires-python = ">=3.13"

dependencies = [
    "websockets",
    "psutil",
    "anyio",
    "requests",
    "astronverse-baseline",
    "astronverse-actionlib",
    "astronverse-websocket-server",
    "importlib_metadata"
#    "rpa_recording>=1.0.2",
#    "rpatools>=1.0.2",
#    "rpa_param_utils>=1.0.5",
]

[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}
astronverse-websocket-server = {path = "../../shared/astronverse-websocket-server", editable = true}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"