[project]
name = "astronverse-actionlib"
version = "1.0.0"
description = "astronverse-actionlib."
requires-python = ">=3.13"

dependencies = [
    "PyYAML",
    "python-dateutil",
    "pycryptodome",
    "astronverse-baseline",
]


[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}


[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"