[project]
name = "astronverse-baseline"
version = "1.0.0"
description = "astronverse-baseline."
requires-python = ">=3.13"

dependencies = [
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"